--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@typescript-eslint/eslint-plugin": "8.11.0",
-		"@typescript-eslint/parser": "8.11.0",
+		"@typescript-eslint/eslint-plugin": "^8.13.0",
+		"@typescript-eslint/parser": "^8.13.0",
 		"autoprefixer": "10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "14.2.1",
