--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "no-unused-vars": "off",
     "unused-imports/no-unused-vars": "off",
     "unused-imports/no-unused-imports": "warn",
+    "react/no-unknown-property": "off",
+    "jsx-a11y/heading-has-content": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
