--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.1",
 		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-radio-group": "^1.2.1",
 		"@radix-ui/react-scroll-area": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -44,6 +45,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"embla-carousel-react": "^8.3.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"lottie-react": "^2.4.0",
