--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
-		"embla-carousel-react": "^8.3.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"lottie-react": "^2.4.0",
@@ -55,6 +54,7 @@
 		"next-intl": "^3.24.0",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
+		"react-confetti": "^6.1.0",
 		"react-dom": "18.3.1",
 		"recharts": "^2.13.3",
 		"sass": "^1.80.6",
@@ -62,6 +62,7 @@
 		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
+		"tsparticles-slim": "^2.12.0",
 		"vaul": "^1.1.1",
 		"zustand": "^5.0.1"
 	},
