--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"framer-motion": "~11.1.1",
+		"input-otp": "^1.4.1",
 		"intl-messageformat": "^10.5.0",
 		"lottie-react": "^2.4.0",
 		"lottie-web": "^5.12.2",
