--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@nextui-org/modal": "^2.0.41",
 		"@nextui-org/navbar": "2.0.37",
 		"@nextui-org/react": "^2.4.8",
+		"@nextui-org/skeleton": "^2.0.32",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "^2.2.6",
@@ -55,6 +56,7 @@
 		"lottie-web": "^5.12.2",
 		"lucide-react": "^0.454.0",
 		"next": "14.2.4",
+		"next-auth": "^4.24.10",
 		"next-intl": "^3.24.0",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
@@ -72,6 +74,8 @@
 	},
 	"devDependencies": {
 		"@types/aos": "^3.0.7",
+		"@types/jsonwebtoken": "^9.0.7",
+		"@types/jws": "^3.2.10",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
