--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.0.5",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "node server.js --turbo",
 		"build": "next build",
-		"start": "next start",
+		"start": "NODE_ENV=production node server.js",
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
@@ -45,6 +45,7 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@types/react-modal": "^3.16.3",
 		"aos": "^2.3.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -62,9 +63,12 @@
 		"react": "18.3.1",
 		"react-confetti": "^6.1.0",
 		"react-dom": "18.3.1",
+		"react-modal": "^3.16.1",
 		"recharts": "^2.13.3",
 		"sass": "^1.80.6",
 		"sharp": "^0.33.5",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
@@ -76,7 +80,7 @@
 		"@types/aos": "^3.0.7",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/jws": "^3.2.10",
-		"@types/node": "20.5.7",
+		"@types/node": "^20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
 		"@typescript-eslint/eslint-plugin": "^8.13.0",
