--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@auth/pg-adapter": "^1.7.4",
+		"@hookform/resolvers": "^3.9.1",
 		"@lottiefiles/dotlottie-react": "^0.9.3",
 		"@nextui-org/autocomplete": "^2.1.7",
 		"@nextui-org/button": "2.0.38",
@@ -37,6 +39,7 @@
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.1",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-radio-group": "^1.2.1",
@@ -45,6 +48,7 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@types/nodemailer": "^6.4.17",
 		"@types/react-modal": "^3.16.3",
 		"aos": "^2.3.4",
 		"class-variance-authority": "^0.7.0",
@@ -53,16 +57,19 @@
 		"framer-motion": "~11.1.1",
 		"input-otp": "^1.4.1",
 		"intl-messageformat": "^10.5.0",
+		"jsonwebtoken": "^9.0.2",
 		"lottie-react": "^2.4.0",
 		"lottie-web": "^5.12.2",
 		"lucide-react": "^0.454.0",
 		"next": "14.2.4",
-		"next-auth": "^4.24.10",
+		"next-auth": "^5.0.0-beta.25",
 		"next-intl": "^3.24.0",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-confetti": "^6.1.0",
 		"react-dom": "18.3.1",
+		"react-hook": "^0.0.1",
+		"react-hook-form": "^7.53.2",
 		"react-modal": "^3.16.1",
 		"recharts": "^2.13.3",
 		"sass": "^1.80.6",
