--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@nextui-org/react": "^2.4.8",
 		"@nextui-org/skeleton": "^2.0.32",
 		"@nextui-org/snippet": "2.0.43",
+		"@nextui-org/spinner": "^2.0.34",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "^2.2.6",
 		"@nextui-org/table": "^2.0.40",
