--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev --turbo",
 		"build": "next build",
-		"start": "NODE_ENV=production node server.js",
+		"start": "next start",
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
@@ -52,6 +52,8 @@
 		"@types/nodemailer": "^6.4.17",
 		"@types/react-modal": "^3.16.3",
 		"aos": "^2.3.4",
+		"axios": "^1.7.8",
+		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -69,6 +71,8 @@
 		"next-auth": "^5.0.0-beta.25",
 		"next-intl": "^3.24.0",
 		"next-themes": "^0.2.1",
+		"nodemailer": "^6.9.16",
+		"prisma": "^5.22.0",
 		"react": "18.3.1",
 		"react-confetti": "^6.1.0",
 		"react-dom": "18.3.1",
@@ -85,6 +89,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"tsparticles-slim": "^2.12.0",
 		"vaul": "^1.1.1",
+		"yup": "^1.4.0",
+		"zod": "^3.23.8",
 		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
