--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@radix-ui/react-radio-group": "^1.2.1",
 		"@radix-ui/react-scroll-area": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
