--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/spinner": "^2.0.34",
 		"@nextui-org/switch": "2.0.34",
-		"@nextui-org/system": "^2.2.6",
+		"@nextui-org/system": "^2.4.6",
 		"@nextui-org/table": "^2.0.40",
-		"@nextui-org/theme": "2.2.11",
+		"@nextui-org/theme": "^2.2.11",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.1.1",
@@ -61,7 +61,7 @@
 		"cmdk": "^1.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.21.1",
-		"framer-motion": "~11.1.1",
+		"framer-motion": "^11.17.0",
 		"input-otp": "^1.4.1",
 		"intl-messageformat": "^10.5.0",
 		"jsonwebtoken": "^9.0.2",
