--- a/package.json
+++ b/package.json
@@ -74,12 +74,15 @@
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.16",
     "prisma": "^5.22.0",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^19.0.0",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.53.2",
     "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.15",
     "recharts": "^2.13.3",
     "sass": "^1.80.6",
     "sharp": "^0.33.5",
